[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/lvl2.png" type="Texture" id=1]
[ext_resource path="res://Characters/Romero.tscn" type="PackedScene" id=2]
[ext_resource path="res://Levels/Level2.gd" type="Script" id=23]
[ext_resource path="res://Core/Core.tscn" type="PackedScene" id=24]
[ext_resource path="res://Characters/Julia.tscn" type="PackedScene" id=25]

[sub_resource type="Animation" id=1]
resource_name = "ZoomIn"
tracks/0/type = "value"
tracks/0/path = NodePath("JuliaCamera:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.3, 0.3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("JuliaCamera:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 507.663, 263.583 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AlphaMask:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.196078, 0.188235, 0.188235, 0 ), Color( 0.196078, 0.188235, 0.188235, 0.631373 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AlphaMask:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("RomeroCamera:zoom")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.3, 0.3 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("RomeroCamera:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 203.679, 320.344 ) ]
}

[node name="Level2" type="Node2D"]
position = Vector2( -4.76575, -1.26151 )
script = ExtResource( 23 )

[node name="Core" parent="." instance=ExtResource( 24 )]
position = Vector2( 0.396851, 0 )

[node name="level" type="Sprite" parent="."]
position = Vector2( 509.566, 299.916 )
scale = Vector2( 3.15548, 3.15548 )
texture = ExtResource( 1 )

[node name="Julia" parent="level" instance=ExtResource( 25 )]
position = Vector2( 45.0363, -2.26514 )
scale = Vector2( 0.7, 0.7 )

[node name="Romero" parent="level" instance=ExtResource( 2 )]
position = Vector2( -51.6986, 12.9246 )
scale = Vector2( 0.8, 0.8 )

[node name="JuliaCamera" type="Camera2D" parent="."]
anchor_mode = 0

[node name="RomeroCamera" type="Camera2D" parent="."]
anchor_mode = 0

[node name="AlphaMask" type="ColorRect" parent="."]
visible = false
margin_left = -20.0
margin_top = -15.0
margin_right = 1061.0
margin_bottom = 619.0
mouse_filter = 2
color = Color( 0.196078, 0.188235, 0.188235, 0 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="CameraAnimationPlayer" type="AnimationPlayer" parent="."]
anims/ZoomIn = SubResource( 1 )
